syntax = "proto3";

package stock;

// Importa el proto del producto
import "product.proto";

// Mensaje Stock que contiene product y el codigo de store
message StockGrpc {
    string code = 1;
    string storeCode = 2; // Es string ya que en el mensaje se muestra solo el codigo, no el store completo
    product.ProductGrpc product = 3; // Muestra el objeto producto
    int32 quantity = 4;
}

// Mensaje para obtener un Stock por su c贸digo
message GetStockByIdRequest {
    string code = 1;
}

// Mensaje vacio para la solicitud de obtener todos los stocks
message Empty {}

// Mensaje que representa una lista de stocks
message StockList {
    repeated StockGrpc stocks = 1;
}

// Mensaje para obtener Stocks por el c贸digo del producto
message GetStockByProductRequest {
    string productCode = 1;
}

// Mensaje para obtener un Stock por su c贸digo de tienda
message GetStockByStoreRequest {
    string storeCode = 1;
}

// Mensaje para crear un nuevo Stock
message CreateStockRequest {
    string storeCode = 1;
    string productCode = 2;
    int32 quantity = 3;
}

// Definici贸n del servicio gRPC
service StockGrpcService {
    rpc getStockById(GetStockByIdRequest) returns (StockGrpc);
    rpc getAllStocks(Empty) returns (StockList);
    rpc getAvailableStocks(Empty) returns (StockList);
    rpc getUnavailableStocks(Empty) returns (StockList);
    rpc getStockByProduct(GetStockByProductRequest) returns (StockList);
    rpc getStockByStore(GetStockByStoreRequest) returns (StockList);
    rpc createStock(CreateStockRequest) returns (StockGrpc);
}